<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Databases</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_id">Email id</string>
    <string name="user_name">User Name</string>
    <string name="default_user">android user</string>
    <string name="databases_demo">Welcome to Android databases demo!</string>
    <string name="user_details">User Details</string>
    <string name="save">Save</string>
    <string name="save_successful">User details saved successfully</string>
    <string name="pass">PASS</string>
    <string name="fail">FAIL</string>
    <string name="delete_user">Delete User</string>
    <string name="default_id">123</string>
    <string name="default_email">email@codehowpedia.org</string>
    <string name="no_details_avaliable">No details avaliable to display :(</string>

</resources>
