<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="5dp" >

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/user_img"
        android:layout_toRightOf="@id/user_img"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/default_id"
        android:textIsSelectable="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/user_id"
        android:layout_toRightOf="@id/user_img"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/default_user"
        android:textIsSelectable="false"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/email_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/user_img"
        android:layout_alignParentRight="true"
        android:layout_below="@id/user_name"
        android:layout_toRightOf="@id/user_img"
        android:maxLines="1"
        android:text="@string/default_email" 
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

</RelativeLayout>