<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.android.databases.DatabaseActivity" > 

    <EditText
        android:id="@+id/edtxt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_Email"
        android:ems="10" 
        android:layout_marginLeft="25dp"
        android:inputType="textEmailAddress"
        >

    </EditText>

     <EditText
         android:id="@+id/edtxt_userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/edtxt_email"
         android:layout_alignRight="@+id/edtxt_email"
         android:layout_below="@+id/label_Email"
         android:ems="10"
         android:inputType="textPersonName" >
 
        </EditText>

     <TextView
         android:id="@+id/label_Email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/edtxt_email"
         android:layout_alignParentLeft="true"
         android:text="@string/email_id" />

     <TextView
         android:id="@+id/label_UserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/edtxt_userName"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/edtxt_userName"
         android:text="@string/user_name" />

     <Button
         android:id="@+id/btn_saveDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/edtxt_userName"
         android:layout_below="@+id/edtxt_userName"
         android:layout_marginTop="18dp"
         android:background="@android:color/holo_blue_light"
         android:onClick="saveDetails"
         android:text="@string/save" 
         /> 
        
</RelativeLayout>